// SPDX-License-Identifier: Apache-2.0

// Copyright 2021 PANTHEON.tech
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package mockcnf;

option go_package = "go.pantheon.tech/stonework/proto/mockcnf;mockcnf";

import "ligato/generic/options.proto";

// MockCnf is used for testing of CNFRegistry and PuntManager.
// NOTE: two different CNFs cannot use proto messages from the same proto files,
// because otherwise two distinct copies of the same file descriptor would be
// received over separate gRPC calls to KnownModels service, while only
// one descriptor can be registered for the same proto file.
message MockCnf2 {
	option (ligato.generic.model) = {
		module: "mock2"
		version: "v1"
		type: "mock-type"
		class: "config"
	};
	option (ligato.generic.model_name_template) = "{{.VppInterface}}";

	string vpp_interface = 1;
	uint32 vrf = 2;
}
